Bouncing Ball affect done

--- a/style.css
+++ b/style.css
@@ -91,8 +91,7 @@ body {
     height: 474px;
     padding: 15px;
     margin-top: 70px;
-    box-shadow: 5px 5px 5px 5px gray;
-    border: 5px solid gray;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     border-radius: 10px;
 }
 
@@ -105,11 +104,13 @@ body {
     font-size: 28px;
     color: #18191F;
     margin-top: 16px;
+    margin-bottom: 0px;
 }
 
 .player-info {
     font-size: 16px;
     color: #6C6C6C;
+    margin-top: 10px;
 }
 
 
@@ -194,57 +195,57 @@ body {
     0% {
         top: 0px;
         left: 0px;
-        transform: rotate(60deg);
+        transform: rotate(00deg);
     }
     10% {
         top: 130px;
         left: 20%;
-        transform: rotate(120deg);
+        transform: rotate(400deg);
     }
     20% {
         top: 0px;
         left: 40%;
-        transform: rotate(180deg);
+        transform: rotate(000deg);
     }
     30% {
         top: 130px;
         left: 60%;
-        transform: rotate(240deg);
+        transform: rotate(400deg);
     }
     40% {
         top: 0px;
         left: 80%;
-        transform: rotate(300deg);
+        transform: rotate(000deg);
     }
     50% {
         top: 130px;
         left: 95%;
-        transform: rotate(360deg);
+        transform: rotate(400deg);
     }
     60% {
         top: 0px;
         left: 80%;
-        transform: rotate(300deg);
+        transform: rotate(00deg);
     }
     70% {
         top: 130px;
         left: 60%;
-        transform: rotate(240deg);
+        transform: rotate(400deg);
     }
     80% {
         top: 0px;
         left: 40%;
-        transform: rotate(180deg);
+        transform: rotate(00deg);
     }
     90% {
         top: 130px;
         left: 20%;
-        transform: rotate(120deg);
+        transform: rotate(400deg);
     }
     100% {
         top: 0px;
         left: 0px;
-        transform: rotate(60deg);
+        transform: rotate(00deg);
     }
 }
 
@@ -259,7 +260,7 @@ body {
     position: relative;
     width: 100px;
     height: 100px;
-    animation: bouncing 8s linear 0s infinite alternate;
+    animation: bouncing 10s linear 0s infinite alternate;
     animation-play-state: running;
 }
 
