--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .head-title:hover {
-    transform: rotate(360deg) scale(1.2) translate(-20%, -20%);
+    transform: scale(1.4) translate(-20%, -20%);
 }
 
 
