5MB football resized to 18kb

--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
 
 
 /*----------------------------
+Style For Desktop & Laptop. Width > 1024px
+------------------------------*/
+
+
+/*----------------------------
             Header Style
 ------------------------------*/
 
@@ -303,9 +308,9 @@ footer {
 }
 
 
-/*----------------------------
- Responsive    For Small Devices
-------------------------------*/
+/*------------------------------------------------
+ Responsive    For Small Devices. (Width < 688px)
+----------------------------------------------------*/
 
 @media only screen and (max-width:688px) {
     /*----------------------------
@@ -434,9 +439,9 @@ Bouncing Ball for phone
 }
 
 
-/*----------------------------
- Responsive For Tab and Ipad
-------------------------------*/
+/*--------------------------------------------
+ Responsive For Tab and Ipad. (688<width<1026)
+---------------------------------------------*/
 
 @media only screen and (min-width:688px) and (max-width:1025px) {
     /*----------------------------
