--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ Style For Desktop & Laptop. Width > 1024px
     font-size: 16px;
     color: #6C6C6C;
     margin-top: 10px;
+    text-align: justify;
 }
 
 
